# game_prices

./: .gitignore  Cargo.toml  README.md  changelog  pyproject.toml
sbase/: args.py  gamebillet.py  gamesplanet.py  indiegala.py  main.py  normalize.py  steam.py
src/games_cli/: Cargo.toml
src/games_cli/src/: main.rs
src/games_core/: Cargo.toml
src/games_core/src/: algolia.rs  fanatical.rs  gamebillet.rs  gmg.rs  gog.rs  indiegala.rs  lib.rs  steam.rs  utils.rs  wgs.rs
src/games_proto/: Cargo.toml
src/games_proto/src/: generated.rs
src/games_proto_build/: Cargo.toml
src/games_proto_build/src/: codegen.rs  main.rs
src/importer/: Cargo.toml
src/importer/sql/: create_tables.sql  drop_tables.sql  get_wishlist.sql  insert_fanatical.sql  insert_fanatical_bundle.sql  insert_gamebillet.sql  insert_gamesplanet.sql  insert_gmg.sql  insert_gog.sql  insert_indiegala.sql  insert_indiegala_bundle.sql  insert_prices.sql  insert_steam.sql  insert_steam_bundle.sql  insert_wgs.sql  update_metadata.sql
src/importer/src/: bundles.rs  insert.rs  main.rs  search.rs  utils.rs
