[workspace]
resolver = "3"
members = [
  "src/games_cli",
  "src/games_core",
  "src/games_proto",
  "src/games_proto_build",
  "src/importer",
]

[workspace.dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bincode = "2.0.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
dotenvy = "0.15.7"
headless_chrome = "1.0.17"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
once_cell = "1.21.3"
prost = "0.13.5"
quick-xml = "0.37.4"
regex = { version = "1.11.1" }
reqwest = { version = "0.12.15", features = ["json"] }
rusqlite = { version = "0.35.0", features = ["chrono", "limits"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
thirtyfour = "0.35.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = [
  "macros",
  "rt",
  "fs",
  "time",
  "process",
] }
