[package]
name = "importer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

games_core = { path = "../games_core" }
games_proto = { path = "../games_proto" }
